--- a/E-Commerse-iOS/Base.lproj/Main.storyboard
+++ b/E-Commerse-iOS/Base.lproj/Main.storyboard
@@ -1,24 +1,133 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="pfb-3a-e0C">
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="vR5-5O-KTN">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="gRW-3z-TQT" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dXY-bA-RPQ">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="veR-fj-vyQ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <tabBarItem key="tabBarItem" systemItem="search" id="o7Y-LP-g0T"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QNY-lH-x1E" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1857" y="426"/>
+        </scene>
+        <!--Category-->
+        <scene sceneID="2p6-9d-DlE">
+            <objects>
+                <collectionViewController id="aHM-XN-ZJE" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="iFx-TI-9YN">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2b9-hM-usE">
+                            <size key="itemSize" width="120" height="120"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="EoO-wc-bs3" customClass="CategoryCollectionViewCell" customModule="E_Commerse_iOS" customModuleProvider="target">
+                                <rect key="frame" x="10" y="10" width="222" height="216"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="WFV-zy-OXp">
+                                    <rect key="frame" x="0.0" y="0.0" width="222" height="216"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IJt-xq-vuj">
+                                            <rect key="frame" x="40" y="8" width="142" height="140"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="75" id="GF4-sk-lFC"/>
+                                                <constraint firstAttribute="width" constant="142" id="WPy-tD-cBM"/>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="75" id="h0P-ZU-9Dd"/>
+                                                <constraint firstAttribute="height" constant="140" id="uYw-53-1JT"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XhN-ak-1FQ">
+                                            <rect key="frame" x="90.333333333333329" y="156" width="41.333333333333329" height="52"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="52" id="knB-yN-TlP"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="IJt-xq-vuj" firstAttribute="centerX" secondItem="WFV-zy-OXp" secondAttribute="centerX" id="4RE-4u-xL5"/>
+                                        <constraint firstItem="XhN-ak-1FQ" firstAttribute="top" secondItem="IJt-xq-vuj" secondAttribute="bottom" constant="8" symbolic="YES" id="8Yn-Mm-cJr"/>
+                                        <constraint firstItem="IJt-xq-vuj" firstAttribute="top" secondItem="WFV-zy-OXp" secondAttribute="topMargin" id="h7e-YL-564"/>
+                                        <constraint firstItem="IJt-xq-vuj" firstAttribute="centerX" secondItem="XhN-ak-1FQ" secondAttribute="centerX" id="yUy-dm-xES"/>
+                                    </constraints>
+                                </collectionViewCellContentView>
+                                <size key="customSize" width="222" height="216"/>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="aHM-XN-ZJE" id="17v-1k-cOg"/>
+                            <outlet property="delegate" destination="aHM-XN-ZJE" id="b1k-nx-wt1"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" title="Category" id="0rx-0x-CqQ"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fzi-tc-fja" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2754.6728971962616" y="-247.51619870410369"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="2XM-OQ-ssQ">
+            <objects>
+                <tabBarController id="pfb-3a-e0C" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="NLm-Wf-oOL">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="JY0-Bj-ose" kind="relationship" relationship="viewControllers" id="u7m-n8-GG3"/>
+                        <segue destination="gRW-3z-TQT" kind="relationship" relationship="viewControllers" id="ITM-gw-PxJ"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kjx-zM-XRh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="967" y="123"/>
+        </scene>
+        <!--Category-->
+        <scene sceneID="dPH-WX-D1i">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JY0-Bj-ose" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Category" id="Tbv-by-gop"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Iu5-dD-3Wg">
+                        <rect key="frame" x="0.0" y="44" width="428" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="aHM-XN-ZJE" kind="relationship" relationship="rootViewController" id="cJl-63-WnR"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0ze-OH-h4N" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1854.6728971962616" y="-247.51619870410369"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
