--- a/E-Commerse-iOS/Base.lproj/Main.storyboard
+++ b/E-Commerse-iOS/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
         <!--Category-->
         <scene sceneID="2p6-9d-DlE">
             <objects>
-                <collectionViewController id="aHM-XN-ZJE" sceneMemberID="viewController">
+                <collectionViewController id="aHM-XN-ZJE" customClass="CategoryCollectionViewController" customModule="E_Commerse_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="iFx-TI-9YN">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
